# parse

lab4/: CMakeLists.txt  io_utils.h  lexgen.cpp  parsegen.cpp
lab4/lexgen-test/: CMakeLists.txt  lex  lexgen-test.cpp
lab4/parsegen-test/: CMakeLists.txt  lex  parse  parsegen-test.cpp
lr/: CMakeLists.txt  CMakeLists.txt.user.16
lr/lexer/: CMakeLists.txt
lr/lexer/include/lexer/: lexer.hpp
lr/lexer/source/: lexer.cpp
lr/lexer/test/: test.cpp
lr/parsegen/: CMakeLists.txt
lr/parsegen/source/: parsegen.cpp
lr/test/: CMakeLists.txt
lr/test/eval/: grammar  main.cpp  parser.hpp
lr/test/paren/: grammar  main.cpp  parser.hpp
